; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/lib/extr_msr-smp.c___wrmsr_safe_regs_on_cpu.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/lib/extr_msr-smp.c___wrmsr_safe_regs_on_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msr_regs_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @__wrmsr_safe_regs_on_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__wrmsr_safe_regs_on_cpu(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.msr_regs_info*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.msr_regs_info*
  store %struct.msr_regs_info* %5, %struct.msr_regs_info** %3, align 8
  %6 = load %struct.msr_regs_info*, %struct.msr_regs_info** %3, align 8
  %7 = getelementptr inbounds %struct.msr_regs_info, %struct.msr_regs_info* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @wrmsr_safe_regs(i32 %8)
  %10 = load %struct.msr_regs_info*, %struct.msr_regs_info** %3, align 8
  %11 = getelementptr inbounds %struct.msr_regs_info, %struct.msr_regs_info* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  ret void
}

declare dso_local i32 @wrmsr_safe_regs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
